--- a/V.04.html
+++ b/V.04.html
@@ -34,13 +34,15 @@
 				if (currentLoc === 1) {
 					currentLoc = 2;		
 					look();
-				} else {
-					currentLoc = 7;
-				}
+			} else {
+				if (currentLoc === 4) {
+					currentLoc = 0;
+					look();
+					}
+			}
 			}
 			look();
 			if (VisitedLoc1 == false) {
-
                 score += 5;
                 document.getElementById("scorebox").value = "Score:" + score;
                 VisitedLoc1 = true;
@@ -48,20 +50,24 @@
                 document.getElementById("scorebox").value = "Score:" + score;
             }	
       }
+		//South
 		function btnSouth() {
-            if (currentLoc === 0) {
-               currentLoc = 7;
+            if (currentLoc === 2) {
+               currentLoc = 1;
 			   look();
             } else {
 				if (currentLoc === 1) {
 					currentLoc = 0;		
 					look();
 				} else {
-					currentLoc = 7;
-				}
+					if (currentLoc === 0) {
+						currentLoc = 4;
+						look();
+						}
+			}
 			}
 			look();
-			if (VisitedLoc1 == false) {
+			if (VisitedLoc2 == false) {
 
                 score += 5;
                 document.getElementById("scorebox").value = "Score:" + score;
@@ -70,6 +76,76 @@
                 document.getElementById("scorebox").value = "Score:" + score;
             }	
       }
+	  
+	  	//East
+		function btnEast() {
+            if (currentLoc === 0) {
+               currentLoc = 3;
+			   look();
+            } else {
+				if (currentLoc === 3) {
+					currentLoc = 7;		
+					look();
+			} else {
+				if (currentLoc === 7) {
+					currentLoc = 8;
+					look();
+			} else {
+				if (currentLoc === 5) {
+					currentLoc = 0;
+					look();
+					}
+				}
+			}
+			}
+			look();
+			if (VisitedLoc3 == false) {
+
+                score += 5;
+                document.getElementById("scorebox").value = "Score:" + score;
+                VisitedLoc1 = true;
+            } else {
+                document.getElementById("scorebox").value = "Score:" + score;
+            }	
+      }
+		//West
+		function btnWest() {
+            if (currentLoc === 0) {
+               currentLoc = 5;
+			   look();
+            } else {
+				if (currentLoc === 5) {
+					currentLoc = 6;		
+					look();
+			} else {
+				if (currentLoc === 3) {
+					currentLoc = 0;
+					look();
+			} else {
+				if (currentLoc === 7) {
+					currentLoc = 3;
+					look();
+			} else { 
+				if (currentLoc === 8) {
+					currentLoc = 7;
+					look();
+					}
+					}
+				}	
+			}	
+			}
+			
+			look();
+			if (VisitedLoc4 == false) {
+
+                score += 5;
+                document.getElementById("scorebox").value = "Score:" + score;
+                VisitedLoc1 = true;
+            } else {
+                document.getElementById("scorebox").value = "Score:" + score;
+            }	
+      }
+		
 		
 		function look() {
 			var desc = "";
@@ -80,15 +156,17 @@
 					break;
 				case 2: desc = " You rush to the back room to check the security cameras and see your dog running in circles";
 					break;
-				case 3: desc =	" You are standing by the entrance scanning the room";
+				case 3: desc =	" You are the fashion lab and see nothing but clothes.";
 					break;
 				case 4: desc = "You leave the building. Try again.";
 					break;
 				case 5: desc =	"You head down to the chemistry lab and hear barking";
 					break;
-				case 6: desc = "Donnelly! You found your dog, sitting by the fashion lab.";
+				case 6: desc = "Donnelly! You found your dog, sitting by the bathroom.";
 					break;
-				case 7: desc = "That is not a valid move";
+				case 7: desc = "You are at the DN Cafe, maybe Donnelly was attracted to the food?";
+					break;
+				case 8: desc = "Nothing but subs in here...";
 				}
 				displayMessage(desc);
 			}
