Working on button

--- a/V.04.html
+++ b/V.04.html
@@ -213,6 +213,10 @@
     <input type="button" id="btnEast" name="btnEast" value="East" onclick="btnEast();" />
 
     <input type="button" id="btnWest" name="btnWest" value="West" onclick="btnWest();" />
+	
+	<input type="text" id="txtCommand" name="txtCommand">
+	<input type="button" value="enter" onclick="btnEnter_click();" />
+	
 
     <p class="footer">
         Questions sent to <a href="mailto:krout.ian@gmail.com"> Ian Krout </a>
