--- a/V.04.html
+++ b/V.04.html
@@ -22,6 +22,10 @@
         var VisitedLoc4 = 0;
         var VisitedLoc5 = 0;
         var VisitedLoc6 = 0;
+        var VisitedLoc7 = 0;
+        var VisitedLoc8 = 0;
+
+
 
         function init() {
             look();
@@ -48,44 +52,115 @@
                 }
             }
         }
-		
-		function MainEntrance () {
-			var message = "You enter Donnelly Hall in a panic realizing your dog, Donnelly, has gotten loose and made his way to his favorite building. You must find him!";
-			UpdateDisplay(message);
-			}
-		function SecurityOffice () {
-			var message = "You are at security, they say they saw your dog but can't say where he is for sure since its a circular building...";
-			UpdateDisplay(message);
-			}
-		function CameraRoom () {
-			var message = " You rush to the back room to check the security cameras and see your dog running in circles";
-			UpdateDisplay(message);
-			}
-		function FashionLab () {
-			var message = " You are the fashion lab and see nothing but clothes.";
-			UpdateDisplay(message);
-			}
-		function OutsideBuilding () {
-			var message = "You leave the building. Try again.";
-			UpdateDisplay(message);
-			}
-		function ChemistryLab () {
-			var message = "You head down to the chemistry lab and hear barking";
-			UpdateDisplay(message);
-			}
-		function FoundDog () {
-			var message = "Donnelly! You found your dog, sitting by the bathroom.";
-			UpdateDisplay(message);
-			}
-		function DNCafe () {
-			var message = "You are at the DN Cafe, maybe Donnelly was attracted to the food?";
-			UpdateDisplay(message);
-			}
-		function SubLine () {
-			var message = "Nothing but subs in here...";
-			UpdateDisplay(message);
-			}
-		
+
+        function MainEntrance() {
+            var message = "You enter Donnelly Hall in a panic realizing your dog, Donnelly, has gotten loose and made his way to his favorite building. You must find him!";
+            UpdateDisplay(message);
+            if (VisitedLoc0 == 0) {
+                score += 5;
+                document.getElementById("scorebox").value = "Score:" + score;
+                VisitedLoc0 = 1;
+            } else {
+                document.getElementById("scorebox").value = "Score:" + score;
+            }
+        }
+
+        function SecurityOffice() {
+            var message = "You are at security, they say they saw your dog but can't say where he is for sure since its a circular building...";
+            UpdateDisplay(message);
+            if (VisitedLoc1 == 0) {
+                score += 5;
+                document.getElementById("scorebox").value = "Score:" + score;
+                VisitedLoc1 = 1;
+            } else {
+                document.getElementById("scorebox").value = "Score:" + score;
+            }
+        }
+
+        function CameraRoom() {
+            var message = " You rush to the back room to check the security cameras and see your dog running in circles";
+            UpdateDisplay(message);
+            if (VisitedLoc2 == 0) {
+                score += 5;
+                document.getElementById("scorebox").value = "Score:" + score;
+                VisitedLoc2 = 1;
+            } else {
+                document.getElementById("scorebox").value = "Score:" + score;
+            }
+        }
+
+        function FashionLab() {
+            var message = " You are the fashion lab and see nothing but clothes.";
+            UpdateDisplay(message);
+            if (VisitedLoc3 == 0) {
+                score += 5;
+                document.getElementById("scorebox").value = "Score:" + score;
+                VisitedLoc3 = 1;
+            } else {
+                document.getElementById("scorebox").value = "Score:" + score;
+            }
+        }
+
+        function OutsideBuilding() {
+            var message = "You leave the building. Try again.";
+            UpdateDisplay(message);
+            if (VisitedLoc4 == 0) {
+                score += 5;
+                document.getElementById("scorebox").value = "Score:" + score;
+                VisitedLoc4 = 1;
+            } else {
+                document.getElementById("scorebox").value = "Score:" + score;
+            }
+        }
+
+        function ChemistryLab() {
+            var message = "You head down to the chemistry lab and hear barking";
+            UpdateDisplay(message);
+            if (VisitedLoc5 == 0) {
+                score += 5;
+                document.getElementById("scorebox").value = "Score:" + score;
+                VisitedLoc5 = 1;
+            } else {
+                document.getElementById("scorebox").value = "Score:" + score;
+            }
+        }
+
+        function FoundDog() {
+            var message = "Donnelly! You found your dog, sitting by the bathroom.";
+            UpdateDisplay(message);
+            if (VisitedLoc6 == 0) {
+                score += 5;
+                document.getElementById("scorebox").value = "Score:" + score;
+                VisitedLoc6 = 1;
+            } else {
+                document.getElementById("scorebox").value = "Score:" + score;
+            }
+        }
+
+        function DNCafe() {
+            var message = "You are at the DN Cafe, maybe Donnelly was attracted to the food?";
+            UpdateDisplay(message);
+            if (VisitedLoc7 == 0) {
+                score += 5;
+                document.getElementById("scorebox").value = "Score:" + score;
+                VisitedLoc7 = 1;
+            } else {
+                document.getElementById("scorebox").value = "Score:" + score;
+            }
+        }
+
+        function SubLine() {
+            var message = "Nothing but subs in here...";
+            UpdateDisplay(message);
+            if (VisitedLoc8 == 0) {
+                score += 5;
+                document.getElementById("scorebox").value = "Score:" + score;
+                VisitedLoc8 = 1;
+            } else {
+                document.getElementById("scorebox").value = "Score:" + score;
+            }
+        }
+
         //North
         function btnNorth() {
             if (currentLoc === 0) {
@@ -242,31 +317,31 @@
             var desc = "";
             switch (currentLoc) {
                 case 0:
-                    MainEntrance ();
+                    MainEntrance();
                     break;
                 case 1:
-                    SecurityOffice ();
+                    SecurityOffice();
                     break;
                 case 2:
-                    CameraRoom ();
+                    CameraRoom();
                     break;
                 case 3:
-                    FashionLab ();
+                    FashionLab();
                     break;
                 case 4:
-					OutsideBuilding ();
+                    OutsideBuilding();
                     break;
                 case 5:
-                    ChemistryLab ();
+                    ChemistryLab();
                     break;
                 case 6:
-                    FoundDog ();
+                    FoundDog();
                     break;
                 case 7:
-                    DNCafe ();
+                    DNCafe();
                     break;
                 case 8:
-                    SubLine ();
+                    SubLine();
                     break;
             }
         }
